Mensagem no perfil quando atingir peso ideal

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -56,5 +56,11 @@
     📊 Ver Gráfico
 </a>
 
+{% if mensagem %}
+  <div class="alert alert-success" style="margin-top:10px;">
+    {{ mensagem }}
+  </div>
+{% endif %}
+
 </body>
 </html>
