--- a/templates/medidas.html
+++ b/templates/medidas.html
@@ -248,6 +248,7 @@
     });
 </script>
 {% endif %}
+<a href="{{ url_for('perfil') }}" class="back-btn">⬅️ Voltar ao Perfik </a>
 
 </body>
 </html>
