--- a/templates/medidas.html
+++ b/templates/medidas.html
@@ -248,7 +248,8 @@
     });
 </script>
 {% endif %}
-<a href="{{ url_for('perfil') }}" class="back-btn">⬅️ Voltar ao Perfik </a>
+<a href="{{ url_for('perfil') }}" class="back-btn">⬅️ Voltar ao Perfil
+</a>
 
 </body>
 </html>
