--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -34,7 +34,7 @@
       <a href="/dashboard" class="btn-voltar">← Voltar ao Dashboard</a>
     </p>
     
-  <a href="{{ url_for('medidas') }}" class="btn">
+  <a href="{{ url_for('medidas') }}" class="btn-voltar">
     📝 Medidas
 </a>
     <hr>
