Adiciona treino novo

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -125,7 +125,7 @@ body.dashboard-page {
        
 
         <!-- Botão principal -->
-        <a class="btn" href="{{ url_for('treino_individual', treino_id=1) }}">⚽ Treinar Agora</a>
+        <a class="btn" href="{{ url_for('treino_individual', treino_id=1) }}">⚽ Treino Amador/a>
 
         <!-- Menu -->
         <div class="menu">
@@ -133,7 +133,7 @@ body.dashboard-page {
             <a class="item" href="/recuperacao">💆 Pós-jogo</a>
             <a class="item" href="/dieta">🥗 Dieta</a>
             <a class="item" href="/perfil">📊 Peso Ideal</a>
-            <a class="item" href="/treinos_intermediario">🔥 Treinos (21 dias)</a>
+            <a class="item" href="/treinos_intermediario">🔥 Treinos Semi-Pro</a>
             <a class="item" href="/logout">🚪 Sair</a>
         </div>
     </div>
