--- a/templates/video_final_13.html
+++ b/templates/video_final_13.html
@@ -41,6 +41,6 @@
         Seu navegador não suporta vídeos.
     </video>
     <div class="msg">👊 Continue firme! O ciclo foi reiniciado. Bora pra cima!</div>
-    <a href="/treino_individual">Recomeçar os treinos</a>
+    <a href="{{ url_for('treino_individual', treino_id=1) }}">Recomeçar os treinos</a>
 </body>
 </html>
